# ghc

./: .gitmodules  .travis.yml  ghc.mk  validate
compiler/: ghc.mk
compiler/coreSyn/: CorePrep.lhs
compiler/hsSyn/: HsBinds.lhs  HsTypes.lhs
compiler/parser/: Parser.y.pp  RdrHsSyn.lhs
compiler/prelude/: PrelNames.lhs
compiler/rename/: RnBinds.lhs
compiler/typecheck/: TcBinds.lhs  TcClassDcl.lhs  TcPat.lhs  TcPatSyn.lhs
libraries/base/: base.cabal
libraries/integer-gmp2/: integer-gmp2.cabal
libraries/integer-gmp2/cbits/: primops.cmm  wrappers.c
libraries/integer-gmp2/src/GHC/: Integer.hs
libraries/integer-gmp2/src/GHC/Integer/: Logarithms.hs  Type.hs
libraries/integer-gmp2/src/GHC/Integer/GMP2/: Internals.hs
mk/: validate-settings.mk
testsuite/driver/: testlib.py
